# Equirust

./: .env.example  .gitignore  Cargo.toml  README.md  runtime-package.json
.github/workflows/: release.yml  test.yml
docs/: file-reference.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/runtime/: main.js  patcher.js  preload.js  renderer.css  renderer.js
src-tauri/resources/runtime/bootstrap/: integrations.js  media.js  prelude.js  settings.js
src-tauri/src/: app_menu.rs  arrpc.rs  autostart.rs  browser_runtime.rs  capturer.rs  csp.rs  desktop.rs  desktop_host.rs  discord.rs  doctor.rs  file_manager.rs  http_proxy.rs  ipc_bridge.rs  lib.rs  main.rs  mod_runtime.rs  notifications.rs  paths.rs  privacy.rs  processes.rs  protocol.rs  settings.rs  spellcheck.rs  store.rs  tray.rs  updater.rs  utilities.rs  vencord.rs  virtmic.rs  voice.rs  win32_window_snapshot.rs  window.rs
src-tauri/src/desktop/: mod.rs  template.rs
src-tauri/src/desktop_stream/: capture_sources.rs  contracts.rs  d3d11_device.rs  dxgi_duplication.rs  mod.rs  sink_contract.rs  stream_session.rs  system_audio.rs  transport.rs  video_config.rs  video_encoder.rs  wgc_window_capture.rs
src-tauri/src/mod_runtime/: assets.rs  commands.rs  legacy.rs  profile.rs  protocol.rs  secure_settings.rs  themes.rs
src-tauri/src/native_capture/: audio.rs  encoder.rs  mod.rs  session.rs  source.rs  transport.rs  types.rs
