[package]
name = "equirust"
version = "1.0.0"
description = "Rust-first desktop host for Equibop"
authors = ["Equicord"]
license = "GPL-3.0-or-later"
repository = "https://github.com/thehollowedone/equirust"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "equirust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-runtime = "2.10.0"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-log = "2"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
webbrowser = "1.1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"
rfd = "0.15"
arboard = "3.6"
image = "0.25"
base64 = "0.22"
xcap = "0.7"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
url = "2.5"
openh264 = "0.6.5"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
interprocess = "2.3"
winreg = "0.55"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Media_MediaFoundation", "Win32_Security_Cryptography", "Win32_System_Com", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
widestring = "1.2"
wasapi = "0.22"
webview2-com = "0.38.2"
windows-core-v61 = { package = "windows-core", version = "0.61" }
